[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ruchi-culinary-assistant"
version = "0.1.0"
authors = [
  { name="Eemani Ananya Krishna", email="ananyakrish124@gmail.com" },
]
description = "A multilingual culinary assistant built with Streamlit and multiple LLM backends."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Streamlit",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
    "streamlit",
    "python-dotenv",
    "requests",
    "google-generativeai"
]

[project.urls]
Homepage = "https://code.swecha.org/ananyakrishna/ruchi-individual-project"
"Bug Tracker" = "https://code.swecha.org/ananyakrishna/ruchi-individual-project"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]